--- a/forgetstyles.css
+++ b/forgetstyles.css
@@ -11,7 +11,8 @@ section{
     min-height: 100vh;
     width: 100%;
 
-    background-image: url('loginwallpaper.jpg');
+    background: linear-gradient(to right, rgb(182, 244, 146), rgb(51, 139, 147));
+    /* background-image: url('loginwallpaper.jpg'); */
     background-position: center;
     background-size: cover;
 }
@@ -20,7 +21,8 @@ section{
     position: relative;
     width: 400px;
     height: 450px;
-    background: transparent;
+    background-color: white;
+    /* background: transparent; */
     border: 2px solid rgba(255, 255, 255, 0.5);
     border-radius: 20px;
     backdrop-filter: blur(15px);
@@ -31,12 +33,14 @@ section{
 
 h2{
     font-size: 2em;
-    color: white;
+    /* color: white; */
+    color: black;
     text-align: center;
 }
 
 h1{
-    color: white;
+    /* color: white; */
+    color: black;
     text-align: center;
 }
 
@@ -44,7 +48,9 @@ h1{
     position: relative;
     margin: 30px 0;
     width: 310px;
-    border-bottom: 2px solid white;
+    /* border-bottom: 2px solid white; */
+    border-bottom: 2px solid black;
+
 }
 
 .inputbox label{
@@ -52,7 +58,8 @@ h1{
     top: 50%;
     left: 5px;
     transform: translateY(-50%);
-    color: white;
+    /* color: white; */
+    color: black;
     font-size: 1em;
     pointer-events: none;
     transition: .5s;
@@ -71,14 +78,16 @@ input:valid ~ label{
     outline: none;
     font-size: 1em;
     padding: 0 35px 0 5px;
-    color: white;
- 
+    /* color: white; */
+    color: black;
+
 }
 
 .inputbox ion-icon{
     position: absolute;
     right: 8px;
-    color: white;
+    /* color: white; */
+    color: black;
     font-size: 1.2em;
     top: 20px;
 }
@@ -86,7 +95,8 @@ input:valid ~ label{
 .forget{
     margin: -15px 0 15px;
     font-size: .9em;
-    color: white;
+    /* color: white; */
+    color: black;
     display: flex;
     justify-content: center;
 }
@@ -96,7 +106,8 @@ input:valid ~ label{
 }
 
 .forget label a{
-    color: white;
+    /* color: white; */
+    color: black;
     text-decoration: none;
 }
 
@@ -108,7 +119,11 @@ button{
     width: 100%;
     height: 40px;
     border-radius: 40px;
-    background: white;
+    
+    /* background: white; */
+    color: black;
+    background: linear-gradient(to right, rgb(182, 244, 146), rgb(51, 139, 147));
+
     border: none;
     outline: none;
     cursor: pointer;
@@ -118,14 +133,16 @@ button{
 
 .register{
     font-size: .9em;
-    color: white;
+    /* color: white; */
+    color: black;
     text-align: center;
     margin: 25px 0 10px;
 }
 
 .register p a{
     text-decoration: none;
-    color: white;
+    /* color: white; */
+    color: black;
     font-weight: 600;
 }
 
